--- a/mail-worker/wrangler.toml
+++ b/mail-worker/wrangler.toml
@@ -30,6 +30,7 @@ crons = ["0 16 * * *"]	#定时任务每天晚上12点执行
 
 
 #[vars]
+#ATTACHMENT_RENAME = "true" #文件是否重命名
 #orm_log = false
 #domain = []				#邮件域名可可配置多个 示例: ["example1.com","example2.com"]
 #admin = ""				#管理员的邮箱	示例: admin@example.com
