--- a/mail-worker/wrangler.toml
+++ b/mail-worker/wrangler.toml
@@ -29,8 +29,8 @@ run_worker_first = true
 crons = ["0 16 * * *"]	#定时任务每天晚上12点执行
 
 
-#[vars]
-#ATTACHMENT_RENAME = "true" #文件是否重命名
+[vars]
+ATTACHMENT_RENAME = "false" #文件是否重命名
 #orm_log = false
 #domain = []				#邮件域名可可配置多个 示例: ["example1.com","example2.com"]
 #admin = ""				#管理员的邮箱	示例: admin@example.com
